[package]
name = "neurofield"
version = "0.0.1"
edition = "2021"
description = "Rust library and TUI for the Neurofield Q21 20-channel EEG amplifier over PCAN-USB"
keywords = ["eeg", "neurofield", "q21", "canbus", "pcan"]
authors = ["Eugene Hauptmann"]
license-file = "LICENSE"
homepage = "https://github.com/eugenehp/neurofield-rs"
repository = "https://github.com/eugenehp/neurofield-rs"
documentation = "https://docs.rs/neurofield"
readme = "README.md"

[features]
default = ["tui"]
tui = [
    "dep:ratatui",
    "dep:crossterm",
]

[lib]
name = "neurofield"
path = "src/lib.rs"

[[bin]]
name = "neurofield"
path = "src/main.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[dependencies]
# Dynamic loading of the PCANBasic shared library at runtime
libloading = "0.8"

# Error handling
thiserror = "2"

# Logging (mirrors C# Debug.WriteLine)
log = "0.4"
env_logger = "0.11"

# TUI (optional)
ratatui = { version = "0.30", features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }
